# coredispatch.xyz

./: .gitignore  .pre-commit-config.yaml  README.md  core-blogs.yml  deploy.sh  docker-compose.yml  feeds.yml  official.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: submit-link.yml
.github/workflows/: deploy.yml  fetch-pipeline.yml  lint.yml  typecheck.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: feed.py
backend/app/pipeline/: blogs.py  discourse.py  github_prs.py  musings.py  peps.py  run.py  welcome.py
drafts/: 2026-w14.yml  2026-w15.yml  2026-w16.yml  2026-w18.yml  2026-w19.yml  2026-w21.yml  2026-w23.yml  2026-w27.yml
editions/: 2026-w14.yml  2026-w15.yml  2026-w18.yml  2026-w21.yml  2026-w23.yml  2026-w25.yml  2026-w27.yml  2026-w29.yml
frontend/: astro.config.mjs  next.config.ts  package.json
frontend/public/: robots.txt
frontend/public/.well-known/: security.txt
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/editions/: page.tsx
frontend/src/app/editions/[number]/: page.tsx
frontend/src/app/staging/: page.tsx
frontend/src/app/staging/[number]/: page.tsx
frontend/src/app/subscribe/: page.tsx
frontend/src/components/: IssueCard.tsx  ItemCard.astro  Preamble.tsx  QuoteOfTheWeek.astro  QuoteOfTheWeek.tsx  SectionBlock.astro  SubscribeForm.tsx
frontend/src/layouts/: Layout.astro
frontend/src/lib/: format.ts  issues.ts  types.ts
frontend/src/pages/: 404.astro  subscribe.astro
frontend/src/pages/editions/: [number].astro
frontend/src/pages/staging/: [number].astro
