[project]
name = "core-dispatch-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "feedgen>=1.0.0",
    "httpx>=0.28.1",
    "icalendar>=7.0.3",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ty>=0.0.29",
    "ruff>=0.15.10",
]

